--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,36 @@
+@article{marion2012vivo,
+  title={In vivo phycocyanin flourometry as a potential rapid screening tool for predicting elevated microcystin concentrations at eutrophic lakes},
+  author={Marion, Jason W and Lee, Jiyoung and Wilkins III, JR and Lemeshow, Stanley and Lee, Cheonghoon and Waletzko, Evan J and Buckley, Timothy J},
+  journal={Environmental science \& technology},
+  volume={46},
+  number={8},
+  pages={4523--4531},
+  year={2012},
+  publisher={ACS Publications}
+}
+
+@article{yuan2015deriving,
+  title={Deriving nutrient targets to prevent excessive cyanobacterial densities in US lakes and reservoirs},
+  author={Yuan, Lester L and Pollard, Amina I},
+  journal={Freshwater Biology},
+  volume={60},
+  number={9},
+  pages={1901--1916},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{ahn2007alternative,
+  title={Alternative alert system for cyanobacterial bloom, using phycocyanin as a level determinant},
+  author={Ahn, C and Joung, S and Yoon, S and Oh, H},
+  journal={JOURNAL OF MICROBIOLOGY-SEOUL-},
+  volume={45},
+  number={2},
+  pages={98},
+  year={2007},
+  publisher={MICROBIOLOGICAL SOCIETY OF KOREA}
+}
+
 @article{wagner2011landscape,
   title={Landscape drivers of regional variation in the relationship between total phosphorus and chlorophyll in lakes},
   author={Wagner, Tyler and Soranno, Patricia A and Webster, Katherine E and Cheruvelil, Kendra Spence},
